--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,31 @@
 
 version: '3.7'
 services:
-  app:
+  graphql:
     image: node:16.13.2-alpine
     container_name: graphql
     restart: unless-stopped
     working_dir: /var/www
+    depends_on:
+      - graphql-redis
     command: sh -c "npm i && npm start"
     ports:
       - '5000:5000'
     volumes:
       - ./:/var/www
     networks:
-      - app
+      - graphql
+
+  graphql-redis:
+    image: redis:alpine
+    container_name: graphql-redis
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
+    restart: unless-stopped
+    ports:
+      - 6379:6379
+    networks:
+      - graphql
 
 networks:
-  app:
+  graphql:
     driver: bridge
