--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,21 @@
 {
-    "env": { "node": true, "es6": false },
-    "parserOptions": {
-      // Required for certain syntax usages
-      "ecmaVersion": 2020
-    },
-    "extends": ["eslint:recommended", "prettier"],
-    "plugins": ["prettier"],
-    "rules": {
-      "prettier/prettier": "error",
-      "no-unused-vars": "error",
-      "no-console": "error",
-      "no-unused-expressions": [2, { "allowTernary": true }],
-      "no-underscore-dangle": "off"
-    }
+  "env": { "node": true, "es6": false },
+  "parserOptions": {
+    // Required for certain syntax usages
+    "ecmaVersion": 2020
+  },
+  "extends": ["eslint:recommended", "prettier"],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error",
+    "no-unused-vars": "error",
+    "no-console": "error",
+    "no-unused-expressions": [2, { "allowTernary": true }],
+    "no-underscore-dangle": "off"
+  },
+  "globals": {
+    "root": true,
+    "day": true,
+    "log": true
   }
-  
+}
