--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  config: path.resolve('config', 'sequelize.js'),
+  config: path.resolve('./config', 'sequelize.js'),
   'migrations-path': path.resolve('./src/database', 'migrations'),
   'seeders-path': path.resolve('./src/database', 'seeders'),
   'models-path': path.resolve('./src/database', 'models'),
