--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,43 @@
 
 version: '3.7'
 services:
-  graphql:
-    image: node:16.13.2-alpine
-    container_name: graphql
-    restart: unless-stopped
-    working_dir: /var/www
+  graphql-api:
     depends_on:
       - graphql-redis
-    command: sh -c "npm i && npm start"
+      - graphql-database
+    build:
+      args:
+        user: graphql
+        uid: 9999
+      context: ./
+      dockerfile: Dockerfile
+    image: graphql-api
+    container_name: graphql-api
+    restart: unless-stopped
+    working_dir: /var/www
+    command: sh -c "npm i --no-audit && npm start"
     ports:
-      - '5000:5000'
+      - '${PORT}:${PORT}'
     volumes:
       - ./:/var/www
+    networks:
+      - graphql
+
+  graphql-database:
+    image: mysql:8.0
+    container_name: graphql-database
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: ${DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_USER: ${DATABASE_USER}
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
+    ports:
+      - ${DATABASE_PORT}:${DATABASE_PORT}
+    volumes:
+      - ./storage/mysql:/var/lib/mysql
     networks:
       - graphql
 
@@ -23,7 +48,9 @@ services:
     command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     restart: unless-stopped
     ports:
-      - 6379:6379
+      - ${REDIS_PORT}:${REDIS_PORT}
+    volumes:
+      - ./storage/redis:/var/lib/redis
     networks:
       - graphql
 
