--- a/package.json
+++ b/package.json
@@ -1,46 +1,51 @@
 {
-  "name": "boilerplate",
+  "name": "cappers.io-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm i && nodemon bin/www",
     "make:keys": "mkdir ./config/keys && node ./scripts/generateKeyPair.js",
-    "env": "mv .env.example .env"
+    "env": "mv .env.example .env",
+    "db": "bash scripts/sequelize.sh",
+    "migrate": "npx sequelize db:migrate",
+    "migrate:fresh": "npx sequelize db:migrate:undo:all && npx sequelize db:migrate",
+    "seed": "npx sequelize db:seed:all"
   },
   "keywords": [],
   "author": "patrick@redact.digital",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "express-rate-limit": "^6.1.0",
-    "express-slow-down": "^1.4.0",
+    "express-graphql": "^0.12.0",
+    "express-rate-limit": "^5.3.0",
     "geoip-lite": "^1.4.3",
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
+    "libphonenumber-js": "^1.9.48",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "rate-limit-redis": "^2.1.0",
-    "redis": "^4.0.2",
+    "redis": "^3.1.2",
     "request-ip": "^2.1.3",
-    "sequelize": "^6.13.0",
+    "sequelize": "^6.15.0",
     "toobusy-js": "^0.5.1",
-    "winston": "^3.4.0",
-    "express-graphql": "^0.12.0"
+    "validatorjs": "^3.22.1",
+    "winston": "^3.4.0"
   },
   "description": "",
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "toobusy-js": "^0.5.1",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "sequelize-cli": "^6.4.1"
   }
