--- a/.env.example
+++ b/.env.example
@@ -3,28 +3,25 @@ NODE_ENV=
 PORT=5000
 APP_NAME="boilerplate"
 API_URL=http://localhost:5000
-APP_URL=http://localhost:8080
 
 # DB LOGIN
-DB=boilerplate
-DB_HOST=localhost
-DB_USER=app
-DB_PASSWORD=password
-DB_DIALECT=mysql
+DATABASE=crypto
+DATABASE_HOST=graphql-database
+DATABASE_USER=app
+DATABASE_PASSWORD=password
+DATABASE_DIALECT=mysql
+DATABASE_PORT=3306
 
 # Redis
-REDIS_HOST=
-REDIS_PASSWORD=
-REDIS_PORT=
+REDIS_HOST=graphql-redis
+REDIS_PASSWORD=password
+REDIS_PORT=6379
 
 # Auth
-SALT=10
-JWT_EXPIRATION=
+SALT=5
+JWT_EXPIRATION=2w
 JWT_ALGORITHM=RS256
 
 # Throttling
-REQUEST_LIMIT=20
-REQUEST_PERIOD=60000
-THROTTLE_DELAY_LENGTH=500
-THROTTLE_DELAY_AFTER=10
-MAX_THROTTLE_DELAY=5000
+REQUEST_LIMIT=150
+REQUEST_PERIOD=1
