--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-graphql": "^0.12.0",
     "express-rate-limit": "^5.3.0",
     "geoip-lite": "^1.4.3",
+    "graphql": "^15.8.0",
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "libphonenumber-js": "^1.9.48",
